--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 		"vite": "5.4.8"
 	},
 	"dependencies": {
-		"bootstrap": "5.3.3"
+		"@splidejs/splide": "^4.1.4",
+		"@splidejs/splide-extension-auto-scroll": "^0.5.3",
+		"@studio-freight/lenis": "^1.0.42",
+		"animejs": "^3.2.2",
+		"bootstrap": "5.3.3",
+		"lenis": "^1.1.18",
+		"modujs": "^1.4.2"
 	}
 }
