--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"animejs": "^3.2.2",
 		"bootstrap": "5.3.3",
 		"lenis": "^1.1.18",
-		"modujs": "^1.4.2"
+		"modujs": "^1.4.2",
+		"sweetalert2": "^11.6.13"
 	}
 }
